--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,19 @@ body {
 	display: flex;
 }
 
+.text {
+  margin: 0;
+}
+
 #column-1 {
   width: 20vw;
   height: auto;
   padding-left: 25px;
   border-right: 1px solid black;
   font-family: 'Poiret One', cursive;
-  font-weight: bold;
+  /*font-weight: bold;*/
   color: #410B13;
-  font-size: 20px;
+  font-size: 28px;
 
 }
 
@@ -51,20 +55,26 @@ body {
 }
 
 #about {
-  /*display: none;*/
+  display: none;
 
 }
 
 #projects {
-  /*display: none;*/
+  display: none;
 
 }
 
 #contact {
-  /*display: none;*/
+  display: none;
 
 }
 
 #fun {
 
 }
+
+.content{
+  font-family: 'Open Sans', sans-serif;
+}
+
+/*increase line spacing*/
