--- a/css/style.css
+++ b/css/style.css
@@ -34,16 +34,16 @@ body {
 
 }
 
-
 .nav-container {
   cursor: pointer;
   cursor: hand;
 }
 
 
-.content{
+.content {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  display: none;
 }
 
 .content-title{
