--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ p {
 
 }
 
-.project-links, .nav-container {
+.project-links, .nav-container, .contact-details {
   cursor: pointer;
   cursor: hand;
 }
