--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,19 @@
 
   }
 }
+
 body {
   background: rgb(249, 249, 249);
   padding: 10px 120px 0 120px;
+}
+img{
+  width: 100%;
+}
+
+@media only screen and (max-width: 640px)  {
+  body{
+    padding: 10px 30px 0;
+  }
 }
 p {
   margin: 0 0 10px;
