have not done anything. commiting to change over to master

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 900px)  {
+/* @media only screen and (min-width: 900px)  {
   .columnParent{
     display: flex;
     justify-content: space-between;
@@ -78,4 +78,4 @@ p {
 }
 canvas {
   border-radius: 50%;
-}
+} */
