--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -39,11 +39,9 @@ html, body, figure {
 }
 
 .content__p5{
-
 }
 
 .content__projects{
-
 }
 
 .content__contact{
@@ -120,6 +118,14 @@ text-align: center
 
 .contact-image {
   width: 10vw;
+}
+
+#canvas-container {
+  margin: 0 auto;
+  height: 80vh;
+  width: 80vw;
+  text-align: center;
+  border: 1px solid #c7c5c5;
 }
 
 
