took out some redundant code. Starting building p5 sketch.

--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -1,6 +1,14 @@
 $offwhite: #f9f9f9;
 $gray: #DCDCDC;
-$charcoal: #404040	;
+$charcoal: #404040;
+
+
+
+$black: #000000;
+$yellow: #fedc3d;
+$blue: #01abaa;
+$peach: #fea680;
+
 $main-font: 'Raleway', serif;
 
 #one{
