--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -133,7 +133,7 @@ text-align: center
   height: 80vh;
   width: 80vw;
   text-align: center;
-  border: 1px solid #c7c5c5;
+  // border: 1px solid #c7c5c5;
 }
 
 
