positioned name using js. slight alteration to particle class so that it works nicer on mobile

--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -43,11 +43,36 @@ html, body, figure {
 }
 
 .content {
-  background-color: $offwhite;
+  // background-color: $offwhite;
+  height: 100vh;
+  width: 100vw;
 }
 
 .content__p5{
+  text-align: center;
+  display: flex;
+
 }
+
+#canvas-container {
+  margin: auto auto;
+}
+
+
+.name-container {
+  z-index: 1;
+  position: absolute;
+  // top: 50vh;
+  // left: 50vw;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px 40px;
+}
+
+.name-container__text {
+  // margin: auto auto;
+}
+
+
 
 .content__projects{
 }
@@ -121,33 +146,12 @@ text-align: center
 
 .photo__img {
     width: 80vw;
-
 }
 
 .contact-image {
   width: 10vw;
 }
 
-#canvas-container {
-  margin: 0 auto;
-  height: 80vh;
-  width: 80vw;
-  text-align: center;
-  // border: 1px solid #c7c5c5;
-}
-
-.name-container {
-  position: relative; 
-  z-index: 1;
-  top: 50vh;
-  left: 50vw;
-  background-color: rgba(0, 0, 0, 0.5);
-  // display: inline;
-  padding: 20px;
-}
-
-.name-container__text{
-}
 
 
 
