--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -11,27 +11,39 @@ $peach: #fea680;
 
 $main-font: 'Raleway', serif;
 
-#one{
+.one{
   font-family: 'Nanum Gothic', sans-serif;
 }
 
-#four{
-  font-family: 'Julius Sans One', sans-serif;
-}
-#five{
+.five{
   font-family: 'Raleway', sans-serif;
 }
 html, body, figure {
   margin: 0;
 }
 
-.menu-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #ededed;
-  min-height: 100vh;
+p {
+  font-family: sans-serif;
 }
+
+.navbar-container {
+  transition: 0.4s;
+  position: fixed;
+  top: 0vh;
+  width: 100vw;
+  background-color: rgb(255, 255, 255);
+  z-index: 3;
+}
+
+.navbar-container__button {
+  text-decoration: none;
+  color: $charcoal;
+}
+
+.navbar-container--transition {
+  top: -10vh
+}
+
 
 /////
 //
@@ -39,49 +51,52 @@ html, body, figure {
 //
 /////
 
-// $menu-icon-width: 5.5rem;
-// $menu-icon-height: $menu-icon-width * 0.75;
-$menu-icon-color: #363636;
-$menu-icon-color--active: #D00251;
+$navbar-icon-color: #363636;
+$navbar-icon-color--active: #D00251;
 
-.menu-icon {
+.navbar-icon-container {
+  position: fixed;
+  top: 0vh;
+  left: 95vw;
+  align-items: center;
+  justify-content: center;
+  z-index: 4;
+  width: 50px;
+}
+
+.navbar-icon {
   position: relative;
-  // max-width: $menu-icon-width;
-  // max-height: $menu-icon-height;
   width: 100%;
   height: 100%;
   display: inline-block;
 }
 
-.menu-icon path {
-  stroke: $menu-icon-color;
+.navbar-icon path {
+  stroke: $navbar-icon-color;
   stroke-width: 5;
   stroke-linecap: round;
   transition: all 250ms ease-in-out;
   transform: rotate(0deg);
   transform-origin: 50% 50%;
-  will-change: transform, opacity;
 }
 
-.menu-button:hover path,
-.menu-button:focus path,
-.menu-button:active path {
-  stroke: $menu-icon-color--active;
+.navbar-icon__button:hover path{
+  stroke: $navbar-icon-color--active;
 }
 
-.menu-icon.is-active path:nth-child(1) {
+.navbar-icon.is-active path:nth-child(1) {
   opacity: 0;
 }
 
-.menu-icon.is-active path:nth-child(4) {
+.navbar-icon.is-active path:nth-child(4) {
   opacity: 0;
 }
 
-.menu-icon.is-active path:nth-child(2) {
+.navbar-icon.is-active path:nth-child(2) {
   transform: rotate(45deg);
 }
 
-.menu-icon.is-active path:nth-child(3) {
+.navbar-icon.is-active path:nth-child(3) {
   transform: rotate(-45deg);
 }
 
@@ -97,27 +112,12 @@ $menu-icon-color--active: #D00251;
   fill: $offwhite;
 }
 
-.angled-svg--charcoal {
-  fill: $charcoal;
-}
+// .angled-svg--charcoal {
+//   fill: $charcoal;
+// }
 
 .text {
   transition: all .2s ease-in-out
-}
-.noscale {
-  transform: scale(0.0);
-}
-
-.content {
-  // background-color: $offwhite;
-  height: 100vh;
-  width: 100vw;
-}
-
-.content__p5{
-  text-align: center;
-  display: flex;
-
 }
 
 #canvas-container {
@@ -128,17 +128,30 @@ $menu-icon-color--active: #D00251;
 .name-container {
   z-index: 1;
   position: absolute;
-  // top: 50vh;
-  // left: 50vw;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 20px 40px;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 20px 60px;
 }
 
 .name-container__text {
-  // margin: auto auto;
+  color: $charcoal;
+  text-align: center;
+  font-size: 48px;
 }
 
+.name-container__text--sml {
+  font-size: 32px;
+}
 
+.content {
+  // background-color: $offwhite;
+  height: 100vh;
+  width: 100vw;
+}
+
+.content__p5 {
+  text-align: center;
+  display: flex;
+}
 
 .content__projects{
 }
@@ -148,10 +161,6 @@ padding-bottom: 40px;
 text-align: center
 }
 
-
-.content--charcoal {
-  background-color: $charcoal;
-}
 
 .container {
   display: flex;
@@ -217,74 +226,3 @@ text-align: center
 .contact-image {
   width: 10vw;
 }
-
-
-
-
-// body {
-//   background-color: $offwhite;
-//   margin: 0 auto
-// }
-
-// figure {
-//   margin: 0 auto;
-// }
-
-// p, a, h1, h2, h3 {
-//   font-family: $main-font;
-// }
-
-// .header {
-//   width: 100%;
-//   background-color: $offwhite;
-// }
-
-// .header__letter {
-//   border-bottom: 1px solid $blue;
-//   font-size: 24px;
-//   font-weight: 700;
-//   color: $charcoal;
-//   text-align: center;
-// }
-
-// .header--first-letter {
-//   background-color: $blue;
-//   color: $offwhite;
-// }
-
-// .navbar{
-//   position: fixed;
-// }
-
-// .navbar__anchor{
-//   text-decoration: none;
-//   font-size: 18px;
-//   cursor: pointer;
-//   cursor: hand;
-// }
-
-// .navbar__button {
-//   color: $offwhite;
-//   background-color: $blue;
-//   padding: 15px;
-//   margin: 0;
-//   &:hover {
-//     background: #28b5a8;
-//   }
-// }
-
-// .content{
-//   border-bottom: 1px solid $gray;
-//   line-height: 1.4;
-//   color: $charcoal;
-// }
-
-// .content__segment {
-//   font-size: 18px;
-//   border-bottom: 1px solid $gray;
-//   line-height: 1.4;
-// }
-
-// .content__segment--font22 {
-//   font-size: 22px;
-// }
