--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -35,6 +35,10 @@ p {
   z-index: 3;
 }
 
+.navbar-container__width{
+  width: 85vw;
+}
+
 .navbar-container__button {
   color: $charcoal;
   &:hover {
@@ -57,12 +61,13 @@ p {
 .navbar-icon-container {
   position: fixed;
   top: 0vh;
-  left: 85vw;
+  left: 89vw;
   align-items: center;
   justify-content: center;
   z-index: 4;
-  width: 50px;
-  background-color: #ffffff
+  width: 35px;
+  background-color: #ffffff;
+  margin-top: 5px;
 }
 
 // .navbar-icon {
@@ -147,7 +152,7 @@ p {
 }
 
 .siema-arrow {
-  height: 40px;
+  height: 30px;
 }
 
 .content__contact{
@@ -218,7 +223,7 @@ p {
 }
 
 .figure-container {
-  // margin-top: 40px;
+  margin-bottom: 20px;
   position: relative;
   overflow: hidden;
   padding-top: 56.25%; // make sure default ratio for youtube vids is kept for container
@@ -239,5 +244,19 @@ p {
   }
   .navbar-icon-container {
     left: 94vw;
+    margin-top: 0px;
+    width: 50px;
+  }
+  .navbar-container{
+    width: 100vw;
+  }
+  .navbar__about{
+    text-align: right;
+  }
+  .navbar__contact {
+    text-align: left;
+  }
+  .navbar-container__width {
+    width: 100vw;
   }
 }
