--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -3,17 +3,9 @@ $gray: #DCDCDC;
 $charcoal: #404040;
 $black: #000000;
 $fuschia: #D00251;
+$fuschia-ghost: #c20940;
+$heading-font: 'Raleway', sans-serif;
 
-
-$main-font: 'Raleway', serif;
-
-.one{
-  font-family: 'Nanum Gothic', sans-serif;
-}
-
-.five{
-  font-family: 'Raleway', sans-serif;
-}
 html, body, figure {
   margin: 0;
 }
@@ -24,6 +16,10 @@ a {
 
 p {
   font-family: sans-serif;
+}
+
+h1, h2 {
+  font-family: $heading-font;
 }
 
 .navbar-container {
@@ -111,6 +107,7 @@ p {
 // Navbar and Navbar Icon End
 //
 /////
+
 #canvas-container {
   margin: auto auto;
 }
@@ -120,6 +117,7 @@ p {
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.7);
   padding: 20px 60px;
+  font-family: $heading-font;
 }
 
 .name-container__text {
@@ -149,24 +147,78 @@ p {
 
 .content__about {
   height: 100vh;
+  max-width: 600px;
+}
+
+.content__projects{
+  max-width: 600px;
+}
+
+.button-container {
+  padding: 35px 0;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.button-container__link {
+  font-family: $heading-font;
+  text-decoration: none;
+  font-size: 18px;
+  background-color: $fuschia;
+  width: 200px;
+  color: $offwhite;
+  padding: 1em;
+  border-radius: 2px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  margin: 8px;
+
+  &:hover {
+    background-color: $fuschia-ghost;
+  }
+}
+
+.button-container__link--ghost {
+  box-shadow: inset 0 0 0 2px $fuschia-ghost;
+  background-color: #ffffff;
+  color: $fuschia;
+
+  &:hover {
+    color: $offwhite;
+  }
+}
+
+.figure-container {
+  margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%; // make sure default ratio for youtube vids is kept for container
+}
+
+// adding same class to images to ensure sizing remains the same.
+
+.figure-container__responsive {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
 .siema-arrow {
   height: 30px;
+  cursor: pointer;
 }
 
 .content__contact{
-  padding-bottom: 40px;
-  height: 50vh;
-  display: flex;
-}
-
-.contact-container {
-  margin: auto auto;
+  max-width: 600px;
+  margin: 50vh auto;
+  // height: 100vh;
 }
 
 .contact-link {
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .container {
@@ -184,58 +236,6 @@ p {
 
 .container__flex1 {
   flex: 1;
-}
-
-.button-container {
-  padding: 35px 0;
-  text-align: center;
-  margin: 20px 0;
-}
-
-.button-container__link {
-  text-decoration: none;
-  font-size: 18px;
-  background-color: $fuschia;
-  width: 200px;
-  color: $offwhite;
-  padding: 1em;
-  border-radius: 2px;
-  font-weight: 300;
-  letter-spacing: 1px;
-  margin: 8px;
-
-  &:hover {
-    background-color: #e00573;
-  }
-}
-
-.button-container__link--ghost {
-  box-shadow: inset 0 0 0 2px #e00573;
-  background-color: $fuschia;
-
-  &:hover {
-    color: $offwhite;
-  }
-}
-
-.projects {
-  margin: 0 auto;
-}
-
-.figure-container {
-  margin-bottom: 20px;
-  position: relative;
-  overflow: hidden;
-  padding-top: 56.25%; // make sure default ratio for youtube vids is kept for container
-} // adding same class to images to ensure sizing remains the same.
-
-.figure-container__responsive {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
 }
 
 @media (min-width: 769px) {
@@ -258,5 +258,8 @@ p {
   }
   .navbar-container__width {
     width: 100vw;
+  }
+  .contact-link {
+    font-size: 20px;
   }
 }
